After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 653162 - Warning on fullscreening
Warning on fullscreening
Status: RESOLVED FIXED
Product: eog
Classification: Core
Component: general
3.0.x
Other Linux
: Normal normal
: ---
Assigned To: EOG Maintainers
EOG Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-06-22 12:29 UTC by Bastien Nocera
Modified: 2011-06-24 12:59 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Bastien Nocera 2011-06-22 12:29:41 UTC
Launch eog, press "F5" for fullscreen.


(eog:9994): GLib-GObject-WARNING **: gsignal.c:2209: signal `size_request' is invalid for instance `0x1da1dc0'

And indeed:
$ grep -r \"size_request\" .
./src/eog-window.c:	g_signal_connect_object (popup, "size_request",

I don't know what effect this not working would have.
Comment 1 Felix Riemann 2011-06-24 12:59:12 UTC
A leftover from the GTK+-3 porting. Solved it the simple way.

commit 1cc2606adac0d8a2b7428dbc17088b23810ca599
Author: Felix Riemann <>
Date:   Fri Jun 24 14:54:12 2011 +0200

    Drop size-request signal callback for fullscreen toolbar
    
    Didn't work with GTK-3 and caused critical warnings when entering
    fullscreen mode. Just removing the callback seems to be sufficient as
    the toolbar's size request is set when entering fullscreen mode anyway.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=653162


This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.