Drop size-request signal callback for fullscreen toolbar

Didn't work with GTK-3 and caused critical warnings when entering
fullscreen mode. Just removing the callback seems to be sufficient as
the toolbar's size request is set when entering fullscreen mode anyway.

https://bugzilla.gnome.org/show_bug.cgi?id=653162