src/eom-window.c
@@ -1677,14 +1677,6 @@ screen_size_changed_cb (GdkScreen *screen, EomWindow *window)
 	eom_window_update_fullscreen_popup (window);
 }
 
-static void
-fullscreen_popup_size_request_cb (GtkWidget      *popup,
-				  GtkRequisition *req,
-				  EomWindow      *window)
-{
-	eom_window_update_fullscreen_popup (window);
-}
-
 static gboolean
 fullscreen_timeout_cb (gpointer data)
 {
@@ -1911,10 +1903,6 @@ eom_window_create_fullscreen_popup (EomWindow *window)
 
 	g_signal_connect_object (screen, "size-changed",
 			         G_CALLBACK (screen_size_changed_cb),
-				 window, 0);
-
-	g_signal_connect_object (popup, "size_request",
-			         G_CALLBACK (fullscreen_popup_size_request_cb),
 				 window, 0);
 
 	g_signal_connect (popup,
